adding username update after login

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 CLIENT_ORIGIN=http://localhost:3000
+DATABASE_URL=mongodb+srv://root:root@cluster0.bgctsof.mongodb.net/chat_app?retryWrites=true&w=majority
