fexing session type error

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 CLIENT_ORIGIN=http://localhost:3000
 DATABASE_URL=mongodb+srv://root:root@cluster0.bgctsof.mongodb.net/chat_app?retryWrites=true&w=majority
+
+COMPASS_STRING=mongodb+srv://root:root@cluster0.bgctsof.mongodb.net/chat_app
